Modified UI for BaseVoiceRecognition and Code fixes